--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+# .github/workflows/ci.yml
+
 name: CI
 
 on:
@@ -19,6 +21,9 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Add repo root to PYTHONPATH
+        run: echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
+
       - name: Install dependencies
         run: |
           pip install --upgrade pip
@@ -32,4 +37,3 @@ jobs:
 
       - name: Run tests
         run: pytest tests/ --maxfail=1 --disable-warnings -q
-        
